--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   </head>
 
   <body>
-    <h1>HELLO WORLD, ARE SOFTWARE DEVELOPERS</h1>
+ <div id = "main">
+    <h1 id ="title">
+      Dr. Norman Borlaug
+    </h1>
+<div id = "img-div">
+  <figure>
+  <img  id = "image" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="">
+</figure>
+</div>
+ </div>
   </body>
 </html>
